--- a/WarProject/nbproject/project.properties
+++ b/WarProject/nbproject/project.properties
@@ -31,14 +31,15 @@ file.reference.Jplay.jar=Jplay.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Jplay.jar}
+    ${file.reference.Jplay.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
