--- a/WarProject/nbproject/project.properties
+++ b/WarProject/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=warproject.WarProject
+main.class=warproject.TelaDeCreditos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
